--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "Rigpa",
+	"name": "Tibetan Web Reader",
   "short_name": "Tibetan Web Reader",
-	"version": "1.0.2",
+	"version": "0.0.1",
   "description": "App for seamless reading experience in Tibetan.",
   "icons": {
     "128": "icons/icon128.png"
